Equality Lab: Fixed location for the bucket for red rectangles (was 20px left of others)
Build a Fraction: Shapes: Determines whether the user is trying to put the container in the toolbox, if so do not send back to play area if overlapped with collection box, see #3397
Fraction Matcher: Level 4: allow unreduced fractions in the numeric representation
Intro: Prevent glitches in the circle shapes
# 1.00.40 (67060) Aug 15, 2012
Build a Fraction: Numbers: Fixed: hitting "reset" when the sim starts up causes the fraction outline to move
> Made sound on by default for Fraction Matcher
# 1.00.39 (67048) Aug 15, 2012
Build a Fraction: Fixed: Dotted lines don't always make sense and 2/2 and 3/3 targets not shown on level 1 shapes, see #3397 comment 15 item 3
Build a Fraction: Fixed: Container node in collection box doesn't always go back to the center of the screen on reset all, see #3397 comment 15 item 2
Build a Fraction: Fixed: Resample forgotten if main screen viewed, see #3397 comment 15 item 1 and 4
Build a Fraction: Numbers: Changed from 4 targets to 3 in level 5
Build a Mixed Fraction: Numbers: Factored out "box" class
Build a Mixed Fraction: Numbers: Started showing whole number dotted line region
Build a Mixed Fraction: Numbers: Made it possible to show mixed numbers for targets
Build a Mixed Fraction: Added more support for mixed numbers
Build a Mixed Fraction: Updated title and internationalized tab name
# 1.00.38 (66957) Aug 14, 2012
Removed unused images
Build a Fraction: Updated i18n
Build a Fraction: Shapes: Fixed: if you push the undo button on more than one shape after it has been collected, new containers will not fly out automatically when you complete a target
Build a Fraction: Numbers: Fixed: Level 6 can create challenges with only a stack of "1" cards
Build a Fraction: Shapes: Fixed: mouse gets away from bars when dragged out
Build a Fraction: Made carousel circles clickable since they look like radio buttons
# 1.00.37 (66926) Aug 14, 2012