@@ -5,13 +5,11 @@ import java.awt.Color;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.awt.geom.Rectangle2D;
+import java.awt.image.BufferedImage;
 
 import edu.colorado.phet.common.phetcommon.util.function.VoidFunction0;
-import edu.colorado.phet.common.phetcommon.view.util.BufferedImageUtils;
 import edu.colorado.phet.common.piccolophet.nodes.HTMLImageButtonNode;
 import edu.colorado.phet.common.piccolophet.nodes.PhetPPath;
-import edu.colorado.phet.common.piccolophet.nodes.layout.HBox;
-import edu.colorado.phet.common.piccolophet.nodes.layout.VBox;
 import edu.colorado.phet.fractions.fractionsintro.FractionsIntroSimSharing.Components;
 import edu.umd.cs.piccolo.PNode;
 
@@ -21,11 +19,8 @@ import edu.umd.cs.piccolo.PNode;
  * @author Sam Reid
  */
 public class LevelSelectionScreenButton extends PNode {
-    public LevelSelectionScreenButton( final VoidFunction0 pressed, int externalPadding, final int internalPadding ) {
-        PNode icon = new PNode() {{
-            addChild( new VBox( 3, new RowNode( internalPadding ), new RowNode( internalPadding ) ) );
-        }};
-        addChild( new HTMLImageButtonNode( RefreshButtonNode.copyWithPadding( BufferedImageUtils.toBufferedImage( icon.toImage() ), externalPadding ) ) {{
+    public LevelSelectionScreenButton( final VoidFunction0 pressed, BufferedImage image ) {
+        addChild( new HTMLImageButtonNode( RefreshButtonNode.copyWithPadding( image, 1, 1 ) ) {{
             setBackground( RefreshButtonNode.BUTTON_COLOR );
             setUserComponent( Components.levelSelectionScreenButton );
             addActionListener( new ActionListener() {
@@ -34,15 +29,6 @@ public class LevelSelectionScreenButton extends PNode {
                 }
             } );
         }} );
-    }
-
-    private class RowNode extends HBox {
-        private RowNode( int internalPadding ) {
-            super( 3 + internalPadding );
-            for ( int i = 0; i < 3; i++ ) {
-                addChild( path() );
-            }
-        }
     }
 
     private PNode path() {
